# vtol-tiltwing

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
MotorControl/pwmesc/: pwmesc.ino
include/: Logger.hpp  constants.hpp  helpers.hpp
include/Adafuit_BNO055/: Adafruit_BNO055.h
include/vtol_tiltwing/: ClockManager.hpp  Flag.hpp  IMUReadTask.hpp  MotorActuateTask.hpp  PIDControlTask.hpp  RCReadTask.hpp  Registry.hpp  Supervisor.hpp
include/vtol_tiltwing/mcl/: ClockManager.hpp  Field.hpp  FieldBase.hpp  Registry.hpp  Supervisor.hpp
lib/: README.md
lib/Logger/include/: Log.hpp  Logger.hpp
lib/Logger/src/: Log.cpp  Logger.cpp
notWorking/: ppo2.py  ppo3.py  ppo_main.py
ppo/: ppo_main.py
src/: ClockManager.cpp  Flag.cpp  IMUReadTask.cpp  MotorActuateTask.cpp  RCReadTask.cpp  Registry.cpp  Supervisor.cpp  main.cpp
src/mcl/: ClockManager.cpp  Flag.cpp  Registry.cpp  Supervisor.cpp
working/: PPO_continuous.py
